--- a/index.html
+++ b/index.html
@@ -12,23 +12,82 @@
      <div class="grid">
          <div class="sidebar">
              <div class="logo-text">
-                   <img src="./images/language-html5.svg" alt=" logo html5">
-                 <h1>Dashboard</h1>
+                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48"
+                      style="fill:#FFFFFF;">
+                     <path d="M18.5 18h-8C8.019 18 6 15.981 6 13.5v-3C6 8.019 8.019 6 10.5 6h8c2.481 0 4.5 2.019 4.5 4.5v3C23 15.981 20.981 18 18.5 18zM18.5 42h-8C8.019 42 6 39.981 6 37.5v-13c0-2.481 2.019-4.5 4.5-4.5h8c2.481 0 4.5 2.019 4.5 4.5v13C23 39.981 20.981 42 18.5 42zM37.5 42h-8c-2.481 0-4.5-2.019-4.5-4.5v-3c0-2.481 2.019-4.5 4.5-4.5h8c2.481 0 4.5 2.019 4.5 4.5v3C42 39.981 39.981 42 37.5 42zM37.5 28h-8c-2.481 0-4.5-2.019-4.5-4.5v-13C25 8.019 27.019 6 29.5 6h8c2.481 0 4.5 2.019 4.5 4.5v13C42 25.981 39.981 28 37.5 28z"></path>
+                 </svg>
+                 <h2>Dashboard</h2>
              </div>
-             <div class="list-items">
+
+             <div class="list-text">
                   <div class="icon-text">
-                      <img src="./images/earth.svg" alt="earth.svg" width="35" height="35">
-                      <h2>Home</h2>
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50"
+                           style="fill:#FFFFFF;">
+                           <path d="M 24.962891 1.0546875 A 1.0001 1.0001 0 0 0 24.384766 1.2636719 L 1.3847656 19.210938 A 1.0005659 1.0005659 0 0 0 2.6152344 20.789062 L 4 19.708984 L 4 46 A 1.0001 1.0001 0 0 0 5 47 L 18.832031 47 A 1.0001 1.0001 0 0 0 19.158203 47 L 30.832031 47 A 1.0001 1.0001 0 0 0 31.158203 47 L 45 47 A 1.0001 1.0001 0 0 0 46 46 L 46 19.708984 L 47.384766 20.789062 A 1.0005657 1.0005657 0 1 0 48.615234 19.210938 L 41 13.269531 L 41 6 L 35 6 L 35 8.5859375 L 25.615234 1.2636719 A 1.0001 1.0001 0 0 0 24.962891 1.0546875 z M 25 3.3222656 L 44 18.148438 L 44 45 L 32 45 L 32 26 L 18 26 L 18 45 L 6 45 L 6 18.148438 L 25 3.3222656 z M 37 8 L 39 8 L 39 11.708984 L 37 10.146484 L 37 8 z M 20 28 L 30 28 L 30 45 L 20 45 L 20 28 z"></path>
+                     </svg>
+                         <p>Home</p>
                   </div>
+                 <div class="icon-text">
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="18" height="18" viewBox="0 0 48 48"
+                          style="fill:#FFFFFF;">
+                         <path d="M24 4A10 10 0 1024 24 10 10 0 1024 4zM36.021 28H11.979C9.785 28 8 29.785 8 31.979V33.5c0 3.312 1.885 6.176 5.307 8.063C16.154 43.135 19.952 44 24 44c7.706 0 16-3.286 16-10.5v-1.521C40 29.785 38.215 28 36.021 28z"></path>
+                     </svg>
+                     <p>Profile</p>
+                 </div>
+                 <div class="icon-text">
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                          style="fill:#FFFFFF;">
+                         <path d="M 10.5 7 C 6.9280619 7 4 9.9280619 4 13.5 L 4 30.5 C 4 34.071938 6.9280619 37 10.5 37 L 12 37 L 12 42.5 C 12 44.46599 14.427297 45.67893 16 44.5 L 26 37 L 37.5 37 C 41.071938 37 44 34.071938 44 30.5 L 44 13.5 C 44 9.9280619 41.071938 7 37.5 7 L 10.5 7 z"></path>
+                     </svg>
+                         <p>Message</p>
+                 </div>
+                 <div class="icon-text">
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                          style="fill:#FFFFFF;">
+                         <path d="M 24 4 C 18.556727 4 13.611893 6.1873196 10 9.7285156 L 10 8 A 2.0002 2.0002 0 0 0 7.9707031 5.9726562 A 2.0002 2.0002 0 0 0 6 8 L 6 15 A 2.0002 2.0002 0 0 0 7.9199219 16.996094 A 2.0002 2.0002 0 0 0 8.8222656 17 L 15 17 A 2.0002 2.0002 0 1 0 15 13 L 12.388672 13 C 15.301199 9.9245705 19.415571 8 24 8 C 32.860089 8 40 15.139911 40 24 C 40 32.860089 32.860089 40 24 40 C 15.139911 40 8 32.860089 8 24 A 2.0002 2.0002 0 1 0 4 24 C 4 35.021911 12.978089 44 24 44 C 35.021911 44 44 35.021911 44 24 C 44 12.978089 35.021911 4 24 4 z M 23.970703 12.972656 A 2.0002 2.0002 0 0 0 22 15 L 22 26 A 2.0002 2.0002 0 0 0 24 28 L 31 28 A 2.0002 2.0002 0 1 0 31 24 L 26 24 L 26 15 A 2.0002 2.0002 0 0 0 23.970703 12.972656 z"></path>
+                     </svg>
+                         <p>History</p>
+                 </div>
+                 <div class="icon-text">
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                          style="fill:#FFFFFF;">
+                         <path d="M 12.5 4 C 10.015 4 8 6.015 8 8.5 L 8 39.5 C 8 41.985 10.015 44 12.5 44 L 35.5 44 C 37.985 44 40 41.985 40 39.5 L 40 20 L 28.5 20 C 26.015 20 24 17.985 24 15.5 L 24 4 L 12.5 4 z M 27 4.8789062 L 27 15.5 C 27 16.327 27.673 17 28.5 17 L 39.121094 17 L 27 4.8789062 z M 16.5 24 C 17.881 24 19 25.119 19 26.5 C 19 27.881 17.881 29 16.5 29 C 15.119 29 14 27.881 14 26.5 C 14 25.119 15.119 24 16.5 24 z M 23.5 25 L 32.5 25 C 33.328 25 34 25.672 34 26.5 C 34 27.328 33.328 28 32.5 28 L 23.5 28 C 22.672 28 22 27.328 22 26.5 C 22 25.672 22.672 25 23.5 25 z M 16.5 32 C 17.881 32 19 33.119 19 34.5 C 19 35.881 17.881 37 16.5 37 C 15.119 37 14 35.881 14 34.5 C 14 33.119 15.119 32 16.5 32 z M 23.5 33 L 32.5 33 C 33.328 33 34 33.672 34 34.5 C 34 35.328 33.328 36 32.5 36 L 23.5 36 C 22.672 36 22 35.328 22 34.5 C 22 33.672 22.672 33 23.5 33 z"></path>
+                     </svg>
+                        <p>Task</p>
+                 </div>
+                 <div class="icon-text">
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                          style="fill:#FFFFFF;">
+                         <path d="M10 19A5 5 0 1010 29 5 5 0 1010 19zM24 19A6 6 0 1024 31 6 6 0 1024 19zM16.48 32.39C16.04 32.14 15.53 32 15 32H5c-1.65 0-3 1.35-3 3v.6c0 3.03 3.51 5.4 8 5.4 1.26 0 2.45-.19 3.5-.53C13.17 39.7 13 38.87 13 38v-.5C13 35.18 14.45 33.19 16.48 32.39zM38 19A5 5 0 1038 29 5 5 0 1038 19zM43 32H33c-.53 0-1.04.14-1.48.39 2.03.8 3.48 2.79 3.48 5.11V38c0 .87-.17 1.7-.5 2.47C35.55 40.81 36.74 41 38 41c4.49 0 8-2.37 8-5.4V35C46 33.35 44.65 32 43 32zM31.5 19c-.384 0-.768-.146-1.061-.439L27.879 16H24.5c-1.93 0-3.5-1.57-3.5-3.5v-5C21 5.57 22.57 4 24.5 4h14C40.43 4 42 5.57 42 7.5v5c0 1.93-1.57 3.5-3.5 3.5h-3.379l-2.561 2.561C32.268 18.854 31.884 19 31.5 19zM24 44c-5.047 0-9-2.636-9-6v-.5c0-1.93 1.57-3.5 3.5-3.5h11c1.93 0 3.5 1.57 3.5 3.5V38C33 41.364 29.047 44 24 44z"></path>
+                     </svg>
+                     <p>Community</p>
+                 </div>
+                 <br/><br/>
+                 <div class="icon-text">
+                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                          style="fill:#FFFFFF;">
+                         <path d="M39.139,26.282C38.426,25.759,38,24.919,38,24.034s0.426-1.725,1.138-2.247l3.294-2.415	c0.525-0.386,0.742-1.065,0.537-1.684c-0.848-2.548-2.189-4.872-3.987-6.909c-0.433-0.488-1.131-0.642-1.728-0.38l-3.709,1.631	c-0.808,0.356-1.749,0.305-2.516-0.138c-0.766-0.442-1.28-1.23-1.377-2.109l-0.446-4.072c-0.071-0.648-0.553-1.176-1.191-1.307	c-2.597-0.531-5.326-0.54-7.969-0.01c-0.642,0.129-1.125,0.657-1.196,1.308l-0.442,4.046c-0.097,0.88-0.611,1.668-1.379,2.11	c-0.766,0.442-1.704,0.495-2.515,0.138l-3.729-1.64c-0.592-0.262-1.292-0.11-1.725,0.377c-1.804,2.029-3.151,4.35-4.008,6.896	c-0.208,0.618,0.008,1.301,0.535,1.688l3.273,2.4C9.574,22.241,10,23.081,10,23.966s-0.426,1.725-1.138,2.247l-3.294,2.415	c-0.525,0.386-0.742,1.065-0.537,1.684c0.848,2.548,2.189,4.872,3.987,6.909c0.433,0.489,1.133,0.644,1.728,0.38l3.709-1.631	c0.808-0.356,1.748-0.305,2.516,0.138c0.766,0.442,1.28,1.23,1.377,2.109l0.446,4.072c0.071,0.648,0.553,1.176,1.191,1.307	C21.299,43.864,22.649,44,24,44c1.318,0,2.648-0.133,3.953-0.395c0.642-0.129,1.125-0.657,1.196-1.308l0.443-4.046	c0.097-0.88,0.611-1.668,1.379-2.11c0.766-0.441,1.705-0.493,2.515-0.138l3.729,1.64c0.594,0.263,1.292,0.111,1.725-0.377	c1.804-2.029,3.151-4.35,4.008-6.896c0.208-0.618-0.008-1.301-0.535-1.688L39.139,26.282z M24,31c-3.866,0-7-3.134-7-7s3.134-7,7-7	s7,3.134,7,7S27.866,31,24,31z"></path>
+                     </svg>
+                     <p>Settings</p>
+                 </div>
              </div>
-             <div class="list-items"></div>
+             <div class="icon-text">
+                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                      style="fill:#FFFFFF;">
+                     <path d="M 24.5 4 C 14.794 4 9 9.42 9 18.5 L 9 22.021484 C 7.747 22.950484 7 24.402 7 26 C 7 28.357 8.6388906 30.337281 10.837891 30.863281 C 12.830891 38.766281 18.026 44 24 44 C 24.828 44 25.5 43.329 25.5 42.5 C 25.5 41.671 24.828 41 24 41 C 19.294 41 14.987344 36.141547 13.527344 29.185547 C 13.381344 28.491547 12.770547 27.994141 12.060547 27.994141 C 12.026547 27.994141 11.983406 27.995047 11.941406 27.998047 C 10.865406 27.968047 10 27.083 10 26 C 10 25.235 10.438531 24.55375 11.144531 24.21875 C 11.667531 23.96975 12 23.442281 12 22.863281 L 12 20.173828 C 15.855 19.161828 18.268641 17.104016 19.556641 15.666016 C 21.197641 16.667016 24.431 18 30 18 C 32.146751 18 34.009504 17.806892 35.496094 17.564453 C 35.731455 18.269148 36 19.301852 36 20.5 L 36 30.5 C 36 33.003499 34.003499 35 31.5 35 L 29.660156 35 A 3.5 3.5 0 0 0 26.5 33 A 3.5 3.5 0 1 0 26.5 40 A 3.5 3.5 0 0 0 29.658203 38 L 31.5 38 C 35.455727 38 38.713881 34.892719 38.974609 31 L 39 31 C 41.209 31 43 29.209 43 27 L 43 25 C 43 22.791 41.209 21 39 21 L 39 20.5 C 39 19.042333 38.709042 17.747445 38.417969 16.816406 C 39.000418 16.492067 39.466643 15.987279 39.740234 15.367188 C 40.098234 14.554188 40.085125 13.629031 39.703125 12.832031 C 37.019125 7.2180313 31.477 4 24.5 4 z M 19 24 A 2 2 0 0 0 19 28 A 2 2 0 0 0 19 24 z M 29 24 A 2 2 0 0 0 28.916016 27.998047 A 2 2 0 0 0 29 28 A 2 2 0 0 0 29 24 z"></path>
+                 </svg>
+                 <p>Support</p>
+             </div>
+             <div class="icon-text">
+                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+                      style="fill:#FFFFFF;">
+                     <path d="M 24 4 C 19.599415 4 16 7.599415 16 12 L 16 16 L 12.5 16 C 10.019 16 8 18.019 8 20.5 L 8 39.5 C 8 41.981 10.019 44 12.5 44 L 35.5 44 C 37.981 44 40 41.981 40 39.5 L 40 20.5 C 40 18.019 37.981 16 35.5 16 L 32 16 L 32 12 C 32 7.599415 28.400585 4 24 4 z M 24 7 C 26.779415 7 29 9.220585 29 12 L 29 16 L 19 16 L 19 12 C 19 9.220585 21.220585 7 24 7 z M 24 23.5 C 27.59 23.5 30.5 26.41 30.5 30 C 30.5 33.59 27.59 36.5 24 36.5 C 20.41 36.5 17.5 33.59 17.5 30 C 17.5 26.41 20.41 23.5 24 23.5 z M 24 27 A 3 3 0 0 0 24 33 A 3 3 0 0 0 24 27 z"></path>
+                 </svg>
+                 <p>Privacy</p>
+             </div>
          </div>
-         <div class="main">
-             <h2>LK</h2>
-         </div>
+
      </div>
-
-
 
 
 
