--- a/index.html
+++ b/index.html
@@ -89,19 +89,16 @@
                  <p>Privacy</p>
              </div>
          </div>
-
+         <div class="main">
+            <div class="header">
+                <div class="navabar"></div>
+                <div class="welcome"></div>
+            </div>
+             <div class="content"></div>
+         </div>
      </div>
 
 
-
-
-
-
-
-
-
-
-
-       <script src="app.js"></script>
+     <script src="app.js"></script>
 </body>
 </html>
